--- a/app/src/main/res/layout/recycler_layout_states.xml
+++ b/app/src/main/res/layout/recycler_layout_states.xml
@@ -27,7 +27,7 @@
         <TextView
             android:id="@+id/infected_num"
             android:layout_width="0dp"
-            android:gravity="center"
+            android:gravity="center|center_horizontal"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:text="20000000" />
@@ -37,7 +37,7 @@
             android:id="@+id/recovered_num"
             android:layout_width="0dp"
             android:layout_columnWeight="1"
-            android:gravity="end"
+            android:gravity="end|center|center_horizontal"
             android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
             android:text="10000000" />
@@ -48,7 +48,7 @@
             android:id="@+id/death_num"
             android:layout_width="0dp"
             android:layout_columnWeight="1"
-            android:gravity="end|center"
+            android:gravity="end|center|center_horizontal"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="5dp"
             android:layout_height="wrap_content"
